-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 13
-
Component/s: hotspot
-
b20
At the start of concurrent marking G1 iterates over the CLDG, calling ClassLoaderDataGraph::clear_claimed_marks (classLoaderDataGraph.cpp:50).
At the same time, when adding a new CLD, the CLDG may be changed in ClassLoaderDataGraph::add_to_graph().
This interaction is unsynchronized completely, potentially causing crashes.
So far we have not been able to pinpoint any crash to this issue though.
At the same time, when adding a new CLD, the CLDG may be changed in ClassLoaderDataGraph::add_to_graph().
This interaction is unsynchronized completely, potentially causing crashes.
So far we have not been able to pinpoint any crash to this issue though.
- relates to
-
JDK-8223570 Shenandoah needs to acquire lock before CLDG::clear_claimed_marks
-
- Resolved
-
-
JDK-8224151 Test vmTestbase/nsk/sysdict/vm/stress/chain/chain007/chain007.java might hang with release binaries
-
- Closed
-