8223391: Unsynchronized iteration of ClassLoaderDataGraph

Lock in G1 before clear_claimed_marks

Reviewed-by: hseigel, lfoltan, tschatzl